chore: update package.json and readme

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/garblovians/react-native-svg-pan-zoom.git"
+    "url": "git@github.com:hokla-org/react-native-simple-svg-pan-zoom.git"
   },
   "keywords": [
     "react",
@@ -25,13 +25,14 @@
   ],
   "authors": [
     "Lukas Hedegaard <lxhdgd@gmail.com> (https://github.com/LukasHedegaard)",
-    "Søren Peter Andersen (https://github.com/sorenpa)"
+    "Søren Peter Andersen (https://github.com/sorenpa)",
+    "Raphaël Dhôte (https://github.com/xiniria)"
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/garblovians/react-native-svg-pan-zoom/issues"
+    "url": "https://github.com/hokla-org/react-native-simple-svg-pan-zoom/issues"
   },
-  "homepage": "https://github.com/garblovians/react-native-svg-pan-zoom#readme",
+  "homepage": "https://github.com/hokla-org/react-native-simple-svg-pan-zoom#readme",
   "devDependencies": {
     "@types/react": "^16.0.27",
     "react": "^16.2.0",
@@ -39,5 +40,6 @@
     "react-native-svg": "^6.0.0",
     "typescript": "^2.6.2"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
